--- a/index.html
+++ b/index.html
@@ -1,43 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
     <title>InstantPlaces</title>
 </head>
-
 <body>
 <div class="container">
     <header class="header">
         <div class="header__logo">
             <h1>InstantPlaces</h1>
+            <div class="header__subtitle">Instantly find your place to visit in Dhaka!</div>
         </div>
         <form class="search" id="search-place-form">
-            <input type="text" class="search__field" placeholder="Search for places..." autocomplete="off" id="search-place" />
-            <button class="btn search__btn" type="submit">
-                <img src="icons/magnifying-glass.svg" class="search__icon" alt="Search Icon">
+            <button class="search__btn" type="submit">
+                <img class="search__icon" src="./icons/magnifying-glass.png" alt="Search Icon">
                 <span>Search</span>
             </button>
+            <input type="text" class="search__field" placeholder="Search for places..." autocomplete="off" id="search-place" />
         </form>
     </header>
     <div class="filters">
-        <label>
-            <input type="radio" name="type" value="all" checked> All
-        </label>
-        <label>
-            <input type="radio" name="type" value="natural"> Natural
-        </label>
-        <label>
-            <input type="radio" name="type" value="human-built"> Human-built
-        </label>
-        <label>
-            <input type="checkbox" name="facility" value="restaurant"> Restaurant
-        </label>
-        <label>
-            <input type="checkbox" name="facility" value="movie"> Movie
-        </label>
+        <div class="filter-row">
+            <label>
+                <input type="radio" name="type" value="all" checked> All
+            </label>
+            <label>
+                <input type="radio" name="type" value="natural"> Natural
+            </label>
+            <label>
+                <input type="radio" name="type" value="human-built"> Human-built
+            </label>
+        </div>
+        <div class="filter-row">
+            <label>
+                <input type="checkbox" name="facility" value="restaurant"> Restaurant
+            </label>
+            <label>
+                <input type="checkbox" name="facility" value="movie"> Movie
+            </label>
+            <label>
+                <input type="checkbox" name="facility" value="park"> Park
+            </label>
+            <label>
+                <input type="checkbox" name="facility" value="shopping mall"> Shopping Mall
+            </label>
+            <label>
+                <input type="checkbox" name="facility" value="educational site"> Educational Site
+            </label>
+            <label>
+                <input type="checkbox" name="facility" value="historical site"> Historical Site
+            </label>
+            <label>
+                <input type="checkbox" name="facility" value="museum"> Museum
+            </label>
+        </div>
     </div>
     <div class="places-grid">
         <!-- Dynamic content will be inserted here -->
@@ -46,5 +64,4 @@
 
 <script type="module" src="index.js"></script>
 </body>
-
 </html>
