--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles.css">
     <title>InstantPlaces</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
                 <img class="search__icon" src="./icons/magnifying-glass.png" alt="Search Icon">
                 <span>Search</span>
             </button>
-            <input type="text" class="search__field" placeholder="Search for places..." autocomplete="off" id="search-place" />
+            <input type="text" class="search__field" placeholder="Search for places..." autocomplete="off" id="search-place">
         </form>
     </header>
     <div class="filters">
@@ -59,6 +59,41 @@
     </div>
     <div class="places-grid">
         <!-- Dynamic content will be inserted here -->
+    </div>
+</div>
+
+<button id="add-place-btn">Add Places You Know</button>
+
+<div id="add-place-modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Add New Place</h2>
+        <form id="add-place-form">
+            <div class="form-group">
+                <label for="place-name">Name:</label>
+                <input type="text" id="place-name" name="place-name" required>
+            </div>
+            <div class="form-group">
+                <label for="place-type">Type:</label>
+                <select id="place-type" name="place-type">
+                    <option value="natural">Natural</option>
+                    <option value="artificial">Artificial</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="place-facility">Facility:</label>
+                <input type="text" id="place-facility" name="place-facility" required>
+            </div>
+            <div class="form-group">
+                <label for="place-image">Image URL:</label>
+                <input type="url" id="place-image" name="place-image" required>
+            </div>
+            <div class="form-group">
+                <label for="place-wikipedia">Wikipedia Link:</label>
+                <input type="url" id="place-wikipedia" name="place-wikipedia" required>
+            </div>
+            <button type="submit">Add Place</button>
+        </form>
     </div>
 </div>
 
